update word selection manager.

--- a/Draw/Resource/Data/WordDictionary.plist
+++ b/Draw/Resource/Data/WordDictionary.plist
@@ -16,6 +16,10 @@
 	<key>Medium</key>
 	<array>
 		<array>
+			<string>星星</string>
+			<string>2</string>
+		</array>
+		<array>
 			<string>袜子</string>
 			<integer>2</integer>
 		</array>
