--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -33,6 +33,8 @@
 	<string>MainWindow</string>
 	<key>UIStatusBarHidden</key>
 	<false/>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
