--- a/Draw/Resource/Data/CN_Words_Dict.plist
+++ b/Draw/Resource/Data/CN_Words_Dict.plist
@@ -366,7 +366,7 @@
 <string>美人鱼</string>
 <string>精油</string>
 <string>斑马纹</string>
-<string>滴水穿石</string>
+<string>水滴石穿</string>
 <string>宿舍</string>
 <string>成龙</string>
 <string>地毯</string>
@@ -398,6 +398,7 @@
 <string>获奖证书</string>
 <string>铁杵成针</string>
 <string>男朋友</string>
+<string>朋友</string>
 <string>口红</string>
 <string>驴友</string>
 <string>袜子</string>
