remove unneeded files add config manager add mobclick utils

--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -39,6 +39,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb352182988165711</string>
+				<string>gckjcchh</string>
 			</array>
 		</dict>
 	</array>
