--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -46,12 +46,13 @@
 	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>CFChannelId</key>
-	<string>AppStore</string>
+	<string>App Store</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 </dict>
 </plist>
