--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -10,10 +10,10 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>57.png</string>
-		<string>57@2x.png</string>
-		<string>50.png</string>
-		<string>72.png</string>
+		<string>new_icon.png</string>
+		<string>new_icon@2x.png</string>
+		<string>new_icon_ipad1.png</string>
+		<string>new_icon_ipad2.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.orange.drawpro</string>
