--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -8,15 +8,15 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>Icon files Draw</key>
+	<key>CFBundleIconFiles</key>
 	<array>
-		<string>57.png</string>
-		<string>57@2x.png</string>
-		<string>50.png</string>
-		<string>72.png</string>
+		<string>new_icon.png</string>
+		<string>new_icon@2x.png</string>
+		<string>new_icon_ipad1.png</string>
+		<string>new_icon_ipad2.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.orange.drawpro</string>
+	<string>com.orange.draw</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,14 +27,6 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>1.0</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>NSMainNibFile</key>
-	<string>MainWindow</string>
-	<key>UIStatusBarHidden</key>
-	<false/>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -46,17 +38,25 @@
 			</array>
 		</dict>
 	</array>
-	<key>UIPrerenderedIcon</key>
-	<true/>
+	<key>CFBundleVersion</key>
+	<string>1.0</string>
 	<key>CFChannelId</key>
 	<string>91</string>
-	<key>CFBundleIconFiles</key>
+	<key>Icon files Draw</key>
 	<array>
-		<string>new_icon.png</string>
-		<string>new_icon@2x.png</string>
-		<string>new_icon_ipad1.png</string>
-		<string>new_icon_ipad2.png</string>
+		<string>57.png</string>
+		<string>57@2x.png</string>
+		<string>50.png</string>
+		<string>72.png</string>
 	</array>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>NSMainNibFile</key>
+	<string>MainWindow</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
+	<key>UIStatusBarHidden</key>
+	<false/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
