--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -39,9 +39,9 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>3.6</string>
+	<string>3.8</string>
 	<key>CFChannelId</key>
-	<string>91</string>
+	<string>App Store</string>
 	<key>Icon files Draw</key>
 	<array>
 		<string>57.png</string>
