zip the worbase.

--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -64,5 +64,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+	<key>CFWordBaseVersion</key>
+	<integer>1</integer>
 </dict>
 </plist>
