update provisioning file

--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -36,7 +36,7 @@
 			</array>
 		</dict>
 	</array>
-	<key>URL types Draw</key>
+	<key>CFURLDraw</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
