--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -8,7 +8,7 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>Icon files Draw Default</key>
+	<key>CFBundleIconFiles</key>
 	<array>
 		<string>new_icon.png</string>
 		<string>new_icon@2x.png</string>
@@ -16,7 +16,7 @@
 		<string>new_icon_ipad2.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.orange.dice</string>
+	<string>com.orange.draw</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -79,7 +79,7 @@
 	<string>DiceDefault.jpg</string>
 	<key>UILaunchImageFile~ipad</key>
 	<string>DiceDefault_ipad.jpg</string>
-	<key>CFBundleIconFiles</key>
+	<key>Icon files Dice</key>
 	<array>
 		<string>dice_icon_57.png</string>
 		<string>dice_icon_57@2x.png</string>
