--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -16,7 +16,7 @@
 		<string>new_icon_ipad2.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.orange.draw</string>
+	<string>com.orange.dice</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -24,7 +24,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.3</string>
+	<string>4.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>URL types Dice</key>
@@ -48,9 +48,9 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>4.3</string>
+	<string>4.5</string>
 	<key>CFChannelId</key>
-	<string>91</string>
+	<string>App Store</string>
 	<key>CFWordBaseVersion</key>
 	<integer>1</integer>
 	<key>Icon files Draw</key>
