--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -8,7 +8,7 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFiles</key>
+	<key>Icon files bak</key>
 	<array>
 		<string>new_icon.png</string>
 		<string>new_icon@2x.png</string>
@@ -75,11 +75,11 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
-	<key>Launch image (iPhone) Dice</key>
+	<key>UILaunchImageFile~iphone</key>
 	<string>DiceDefault.jpg</string>
-	<key>Launch image (iPad) Dice</key>
+	<key>UILaunchImageFile~ipad</key>
 	<string>DiceDefault_ipad.jpg</string>
-	<key>Icon files Dice</key>
+	<key>CFBundleIconFiles</key>
 	<array>
 		<string>dice_icon_57.png</string>
 		<string>dice_icon_57@2x.png</string>
