--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -24,10 +24,10 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.5</string>
+	<string>2.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>URL types Dice</key>
+	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
@@ -36,7 +36,7 @@
 			</array>
 		</dict>
 	</array>
-	<key>CFBundleURLTypes</key>
+	<key>URL types DRAW</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
@@ -48,7 +48,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>4.5</string>
+	<string>2.0</string>
 	<key>CFChannelId</key>
 	<string>AppStore</string>
 	<key>CFWordBaseVersion</key>
