--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -8,7 +8,7 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>Icon files bak</key>
+	<key>CFBundleIconFiles</key>
 	<array>
 		<string>new_icon.png</string>
 		<string>new_icon@2x.png</string>
@@ -27,7 +27,7 @@
 	<string>4.8</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>URL types Dice</key>
+	<key>URL types DICE</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
@@ -50,10 +50,10 @@
 	<key>CFBundleVersion</key>
 	<string>4.8</string>
 	<key>CFChannelId</key>
-	<string>App Store</string>
+	<string>Test</string>
 	<key>CFWordBaseVersion</key>
 	<integer>1</integer>
-	<key>CFBundleIconFiles</key>
+	<key>Icon files Draw</key>
 	<array>
 		<string>57.png</string>
 		<string>57@2x.png</string>
@@ -71,13 +71,15 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>Launch image (iPhone) Dice</key>
 	<string>DiceDefault.jpg</string>
 	<key>Launch image (iPad) Dice</key>
 	<string>DiceDefault_ipad.jpg</string>
-	<key>Icon files Dice</key>
+	<key>Icon files DICE</key>
 	<array>
 		<string>dice_icon_57.png</string>
 		<string>dice_icon_57@2x.png</string>
