remove some temp files use app cache dir instead of document dir update data model

--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -8,7 +8,7 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFiles</key>
+	<key>Icon files DRAW</key>
 	<array>
 		<string>new_icon.png</string>
 		<string>new_icon@2x.png</string>
@@ -16,7 +16,7 @@
 		<string>new_icon_ipad2.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.orange.draw</string>
+	<string>com.orange.dice</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -24,10 +24,10 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.8</string>
+	<string>2.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>URL types DICE</key>
+	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
@@ -36,7 +36,7 @@
 			</array>
 		</dict>
 	</array>
-	<key>CFBundleURLTypes</key>
+	<key>URL types DRAW</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
@@ -48,7 +48,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>4.8</string>
+	<string>2.0</string>
 	<key>CFChannelId</key>
 	<string>Test</string>
 	<key>CFWordBaseVersion</key>
@@ -75,11 +75,11 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
-	<key>Launch image (iPhone) Dice</key>
+	<key>UILaunchImageFile~iphone</key>
 	<string>DiceDefault.jpg</string>
-	<key>Launch image (iPad) Dice</key>
+	<key>UILaunchImageFile~ipad</key>
 	<string>DiceDefault_ipad.jpg</string>
-	<key>Icon files DICE</key>
+	<key>CFBundleIconFiles</key>
 	<array>
 		<string>dice_icon_57.png</string>
 		<string>dice_icon_57@2x.png</string>
