--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -8,7 +8,7 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>Icon files DRAW</key>
+	<key>CFBundleIconFiles</key>
 	<array>
 		<string>new_icon.png</string>
 		<string>new_icon@2x.png</string>
@@ -27,7 +27,7 @@
 	<string>2.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleURLTypes</key>
+	<key>URL types Dice</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
@@ -36,7 +36,7 @@
 			</array>
 		</dict>
 	</array>
-	<key>URL types DRAW</key>
+	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
@@ -75,11 +75,11 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
-	<key>UILaunchImageFile~iphone</key>
+	<key>Launch image (iPhone) Dice</key>
 	<string>DiceDefault.jpg</string>
-	<key>UILaunchImageFile~ipad</key>
+	<key>Launch image (iPad) Dice</key>
 	<string>DiceDefault_ipad.jpg</string>
-	<key>CFBundleIconFiles</key>
+	<key>Icon files Dice</key>
 	<array>
 		<string>dice_icon_57.png</string>
 		<string>dice_icon_57@2x.png</string>
