--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -50,7 +50,7 @@
 	<key>CFBundleVersion</key>
 	<string>5.0</string>
 	<key>CFChannelId</key>
-	<string>Test</string>
+	<string>App Store</string>
 	<key>CFWordBaseVersion</key>
 	<integer>1</integer>
 	<key>Icon files Draw</key>
