--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -13,7 +13,7 @@
 		<string>new_icon.png</string>
 		<string>new_icon@2x.png</string>
 		<string>new_icon_ipad1.png</string>
-		<string>new_icon_ipad2.png</string>
+		<string>icon-21.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.orange.draw</string>
