update for draw 5.0 submission

--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -8,15 +8,15 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>Icon files DRAW</key>
+	<key>CFBundleIconFiles</key>
 	<array>
 		<string>new_icon.png</string>
 		<string>new_icon@2x.png</string>
 		<string>new_icon_ipad1.png</string>
-		<string>icon-21.png</string>
+		<string>new_icon_ipad2.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.orange.dice</string>
+	<string>com.orange.draw</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -24,10 +24,10 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2</string>
+	<string>5.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleURLTypes</key>
+	<key>URL types DICE</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
@@ -36,7 +36,7 @@
 			</array>
 		</dict>
 	</array>
-	<key>URL types DRAW</key>
+	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
@@ -48,9 +48,9 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.2</string>
+	<string>5.0</string>
 	<key>CFChannelId</key>
-	<string>91</string>
+	<string>App Store</string>
 	<key>CFWordBaseVersion</key>
 	<integer>2</integer>
 	<key>Icon files DRAW OLD</key>
@@ -73,13 +73,11 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
-	<key>Launch image (iPhone) TBD</key>
-	<string>DiceDefault.jpg</string>
-	<key>Launch image (iPad) TBD</key>
-	<string>DiceDefault_ipad.jpg</string>
-	<key>UILaunchImageFile</key>
+	<key>Launch image Dice</key>
 	<string>DiceDefault</string>
-	<key>CFBundleIconFiles</key>
+	<key>UILaunchImageFile</key>
+	<string>Default</string>
+	<key>Icon files Dice</key>
 	<array>
 		<string>dice_icon_57.png</string>
 		<string>dice_icon_57@2x.png</string>
