--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -85,7 +85,7 @@
 		<string>dice_icon_72.png</string>
 	</array>
 	<key>CFResourceTest</key>
-	<false/>
+	<true/>
 	<key>CFServerTest</key>
 	<false/>
 </dict>
