--- a/Draw/Draw-Info.plist
+++ b/Draw/Draw-Info.plist
@@ -33,6 +33,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb451387761588871</string>
+				<string>sinaweibosso.562852192</string>
 			</array>
 		</dict>
 	</array>
@@ -44,6 +45,7 @@
 				<string>fb352182988165711</string>
 				<string>gckjcchh</string>
 				<string>wx427a2f57bc4456d1</string>
+				<string>sinaweibosso.2831348933</string>
 			</array>
 		</dict>
 	</array>
